@@ -1,11 +1,11 @@
 
-## RcppUUID -- Universally Unique Identifiers (UUIDs) version 4 and 5
+## RcppUUID -- Universally Unique Identifiers (UUIDs) versions 4, 5 and 7
 
 [![CI](https://github.com/eddelbuettel/rcppuuid/workflows/ci/badge.svg)](https://github.com/eddelbuettel/rcppuuid/actions?query=workflow%3Aci)
 [![License: GPL v2](https://img.shields.io/badge/License-GPL%20v2-blue.svg)](https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html)
 [![CRAN Status](https://www.r-pkg.org/badges/version/RcppUUID)](https://cran.r-project.org/package=RcppUUID)
 [![r-universe](https://eddelbuettel.r-universe.dev/badges/RcppUUID)](https://eddelbuettel.r-universe.dev/rcppuuid)
-[![Dependencies](https://tinyverse.netlify.app/badge/anytime)](https://cran.r-project.org/package=RcppUUID)
+[![Dependencies](https://tinyverse.netlify.app/badge/RcppUUID)](https://cran.r-project.org/package=RcppUUID)
 [![Downloads](https://cranlogs.r-pkg.org/badges/RcppUUID?color=brightgreen)](https://www.r-pkg.org:443/pkg/RcppUUID)
 [![Last Commit](https://img.shields.io/github/last-commit/eddelbuettel/rcppuuid)](https://github.com/eddelbuettel/rcppuuid)
 
@@ -14,7 +14,7 @@
 
 #### Generate version 4 UUIDs
 
-Generate single UUID:
+Generate a single random UUID:
 
 ``` r
 RcppUUID::uuid_generate_random()
@@ -25,12 +25,12 @@ Generate multiple UUIDs:
 
 ``` r
 RcppUUID::uuid_generate_random(5)
-#> [1] "2d5caacd-7123-4072-b66f-74874f0424d9" "3c4f1e13-50af-46ab-a32a-f17cb1842875" 
+#> [1] "2d5caacd-7123-4072-b66f-74874f0424d9" "3c4f1e13-50af-46ab-a32a-f17cb1842875"
 #> [3] "b0c0075d-f1fb-476c-9d27-0dd07c63ddef" "e6992ca8-7b32-45ab-9fa2-e11690c11c35"
 #> [5] "4d9fce08-a71d-402f-9fa5-9e38fa136abb"
 ```
 
-Check uniques for the uuids:
+Check uniqueness for the uuids:
 
 ``` r
 unique_n <- function(x) length(unique(x))
@@ -70,7 +70,7 @@ microbenchmark::microbenchmark(
 
 #### Generate version 5 UUIDs
 
-Generate version UUIDs based on the text input:
+Generate version 5 UUIDs based on text input:
 
 ``` r
 RcppUUID::uuid_generate_name(letters[1:5])
@@ -103,6 +103,27 @@ RcppUUID::uuid_validate(RcppUUID::uuid_generate_nil(5))
 #> [1] TRUE TRUE TRUE TRUE TRUE
 RcppUUID::uuid_validate(RcppUUID::uuid_generate_name(letters[1:5]))
 #> [1] TRUE TRUE TRUE TRUE TRUE
+```
+
+#### Generate version 7 UUIDs
+
+Generate version 7 UUIDs based on under underlying clock at a 100ns
+granularity:
+
+```r
+> RcppUUID::uuid_generate_time()
+[1] "0194d8f9-c2e7-71aa-801b-75ae7f44aa1d"
+>
+```
+
+Or generate multiple:
+
+```r
+> RcppUUID::uuid_generate_time(5)
+[1] "0194d8fa-7add-735c-805b-6bbf22b78b9e" "0194d8fa-7add-735e-8012-3e0e53895b19"
+[3] "0194d8fa-7add-735e-81af-bc67bb435ade" "0194d8fa-7add-735e-82b1-405bf57963ad"
+[5] "0194d8fa-7add-735f-801e-efe57078b2e7"
+>
 ```
 
 ### Installation
@@ -146,32 +167,31 @@ bug.report(package = "RcppUUID")
 
 Before reporting a bug or submitting an issue, please do the following:
 
--   Make sure that you error or issue was not reported or discussed
-    earlier. Please, use the search;
--   Check the news list of the current version. Some errors could be
-    caused by the package changes. It could be done with
-    `news(package = "RcppUUID", Version == packageVersion("RcppUUID"))`
-    command;
--   Make a minimal reproducible example of the code that consistently
-    causes the error;
--   Make sure that the error occurs during the execution of a function
-    from the `RcppUUID` package, not from other packages;
--   Try to reproduce the error with the last development version of the
-    package from the git repository.
+- Make sure that you error or issue was not reported or discussed earlier so
+  please, use the search function.
+- Check the news list of the current version. Some errors could be caused by
+  the package changes. It could be done with the `news(package = "RcppUUID",
+  Version == packageVersion("RcppUUID"))` command.
+- Make a minimal reproducible example of the code that consistently causes
+  the error.
+- Make sure that the error occurs during the execution of a function
+  from the `RcppUUID` package, not from other packages.
+- Try to reproduce the error with the last development version of the
+  package from the git repository.
 
-Please attach traceback() and sessionInfo() output to bug report. It may
+Please attach `traceback()` and `sessionInfo()` output to bug report. It may
 save a lot of time.
 
 ### License
 
-The `RcppUUID` package is distributed under
+The `RcppUUID` package is distributed under the
 [GPLv2](http://www.gnu.org/licenses/gpl-2.0.html) license.
 
 ### Author
 
 The package was written by [Artem Klevtsov](https://github.com/artemklevtsov)
 and maintained in [this GitLab
-repo](https://gitlab.com/artemklevtsov/rcppuuid).
+repo](https://gitlab.com/artemklevtsov/rcppuuid) for releases 1.0.0 to 1.1.1.
 
-The package in this repository is now maintained by [Dirk
-Eddelbuettel](https://github.com/eddelbuettel). 
+Starting with release 1.1.2, the package in this repository is now maintained
+by [Dirk Eddelbuettel](https://github.com/eddelbuettel).
