@@ -6,9 +6,9 @@
 \alias{RcppUUID}
 \title{Generating Universally Unique Identificators}
 \description{
-Provides functions to generating a vector of Universally Unique Identifiers (UUID).
-Used implementation from the Boost C++ library. Supported random (version 4) and name (version 5)
-UUIDs. UUIDs generation are parallelized by OpenMP.
+Provides functions to generating a vector of Universally Unique Identifiers (UUID)
+using the implementation from the Boost C++ library. Supports random (version 4), name (version 5)
+and time-based (version 7) UUIDs. UUIDs generation is parallelized by OpenMP.
 }
 \seealso{
 Useful links:
